--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
-# Compiled class file
+# Compiled files
 *.class
+bin/
+build/
 
 # Log file
 *.log
@@ -21,3 +23,6 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Eclipse project files
+.classpath
